--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -8,6 +8,13 @@ img{
 
 .navbar{
     display: flex;
-    background-color: black;
+    background-image: url(./NavBarImg.png);
+    background-size: contain;
+
 }
 
+h3{
+    color: #0D6EFD;
+    background-color: rgba(255, 255, 255, 0.719);
+
+}
